--- a/static/index.html
+++ b/static/index.html
@@ -1,51 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Llama ChatBot</title>
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="./style.css">
+        <title>LLM ChatBot</title>
     </head>
     <body>
-        <div class="container">
-            <header class="header">
-                <div class="header-title">
-                    <h1>Llama ChatBot</h1>
-                    <div class="bot-status">
-                        <div class="status-indicator"></div>
-                        <span>Online</span>
-                    </div>
-                </div>
-                <div class="controls">
-                    <button class="theme-toggle" aria-label="Toggle theme">
-                        <i class="fas fa-moon"></i>
-                    </button>
-                </div>
-            </header>
-
-            <div class="chat-container" id="chatContainer">
-                <!-- Messages will be added here -->
-            </div>
-
-            <div class="typing-indicator">
-                <div class="typing-dots">
-                    <div class="typing-dot"></div>
-                    <div class="typing-dot"></div>
-                    <div class="typing-dot"></div>
-                </div>
-            </div>
-
-            <div class="input-container">
-                <div class="input-wrapper">
-                    <input type="text" id="messageText" class="message-input" placeholder="Type your message..." aria-label="Message input">
-                    <div class="action-buttons">
-                        <button class="send-button">
-                            <span>Send</span>
-                            <i class="fas fa-paper-plane"></i>
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <script src="./index.js"></script>
+        <h1>LLM ChatBot API server</h1>
     </body>
 </html>
